Created LICENSE.txt; Edited Form1

--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -16,6 +16,7 @@ components:
     properties: {}
     type: TextBox
     layout_properties: {grid_position: 'EELVAJ,NBHBHT'}
+    event_bindings: {pressed_enter: so_txt_pressed_enter}
   - name: btn_sap_xep
     properties: {text: Sắp xếp}
     type: Button
